syntax = "proto3";

package feed.v1;

option go_package="feed/v1;feedv1";

message User {
  int64 id = 1;
}

message LifeLog {
  int64 id = 1;
}

message FeedEvent {
  int64 id = 1;
  User user = 2;
  string type = 3;
  string content = 4;
  int64 create_time = 5;
  LifeLog lifeLog = 6;
}


service FeedService {
  rpc CreateFeedEvent(CreateFeedEventRequest) returns (CreateFeedEventResponse);
  rpc FindFeedEvents( FindFeedEventsRequest)returns (FindFeedEventsResponse);
}

message CreateFeedEventRequest {
  FeedEvent feedEvent = 1;
}

message CreateFeedEventResponse{
}

message FindFeedEventsRequest {
  int64 user_id = 1;
  int64 limit = 2;
  int64 create_time = 3;
}
message  FindFeedEventsResponse {
  repeated FeedEvent feedEvents = 1;
}